Path.of is only available since Java 11